--- a/proposal/Makefile
+++ b/proposal/Makefile
@@ -1,4 +1,4 @@
-targets=proposal.pdf
+targets=proposal.pdf proposal-slides.pdf
 all: $(targets)
 
 proposal.pdf: *.tex sources.bib
@@ -6,6 +6,12 @@ proposal.pdf: *.tex sources.bib
 	bibtex proposal
 	pdflatex proposal.tex
 	pdflatex proposal.tex
+
+proposal-slides.pdf: *.tex sources.bib
+	pdflatex proposal-slides.tex
+	bibtex proposal-slides
+	pdflatex proposal-slides.tex
+	pdflatex proposal-slides.tex
 
 
 clean:
