made weaving more explicit, also made clean remove all generated files

--- a/code/Makefile
+++ b/code/Makefile
@@ -1,6 +1,6 @@
 CXXFLAGS=-g --std=c++11
 CC=g++
-ALL=tensorTest tensor.pdf tensor.h
+ALL=tensorTest tensor.pdf tensor.h tensor.tex
 
 all: $(ALL)
 tensorTest: tensorTest.o 
@@ -8,8 +8,10 @@ tensorTest.o: tensorTest.cpp tensor.h
 tensor.h: tensor.nw
 	notangle -Rtensor.h -L'#line %L "%F"%N' tensor.nw > tensor.h
 
-tensor.pdf: tensor.nw
+tensor.tex: tensor.nw
 	noweave -delay tensor.nw > tensor.tex
+
+tensor.pdf: tensor.tex
 	pdflatex tensor.tex
 	pdflatex tensor.tex
 	pdflatex tensor.tex
@@ -17,4 +19,4 @@ tensor.pdf: tensor.nw
 	splitindex tensor
 	pdflatex tensor.tex
 clean:
-	rm -f $(ALL) *.o a.out
+	rm -f $(ALL) *.o a.out *.pdf *.aux *.idx *.ilg *ind *.log
