added vocabulary io helper functions

--- a/code/Makefile
+++ b/code/Makefile
@@ -42,8 +42,8 @@ influence.pdf: influence.tex
 	pdflatex influence.tex
 	pdflatex influence.tex
 	pdflatex influence.tex
-	makeindex influence
-	splitindex influence 
+	#makeindex influence
+	#splitindex influence 
 	pdflatex influence.tex
 
 clean:
